--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,136 @@
 .App {
   text-align: center;
+  background-image: url("./img_data/librestock.jpg");
+  width: 100%;
+  background-repeat: no-repeat;
+  color: #fff;
+  overflow-x: hidden;
+  background-color: rgb(219, 210, 198);
+}
+/* .d_k {
+  background-color: rgba(0,0,0,0.5);
+  width: 100%;
+  height: 1220px;
+  position: absolute;
+  top: 60px;
+  z-index: 1;
+} */
+.navbar {
+  height: 60px;
+  width: 98%;
+  background-color: #000;
+  color: #fff;
+  padding: 0 1rem;
+}
+.navbar-nav {
+  margin: 0;
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.nav-item {
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: white;
+}
+.icon-button {
+  width: 25px;
+  height: 25px;
+  background-color: #414141;
+  border-radius: 50%;
+  padding: 5px;
+  margin: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: filter 300ms;
+  overflow: hidden;
+}
+.icon-button:hover {
+  filter: brightness(1.2);
+}
+.icon-button svg {
+  fill: var(--text-color);
+  width: 20px;
+  height: 20px;
+}
+.dropdown {
+  position: absolute;
+  top: 58px;
+  width: 300px;
+  transform: translateX(-45%);
+  background-color: #3f4649;
+  color: #fff;
+  list-style: none;
+  border-radius: 8px;
+  padding: 1rem;
+  overflow: hidden;
+  transition: height 0.6s ease;
+  z-index: 3;
+}
+.menu-item {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  transition: background 0.6s;
+  padding: 0.5rem;
+}
+.menu-item:hover {
+  background-color: #3f4649;
+}
+.red-important {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  transition: background 0.6s;
+  padding: 0.5rem;
+}
+
+.icon-right {
+  margin-left: auto;
+}
+.menu-primary-enter {
+  position: absolute;
+  transform: translateX(-110%);
+}
+.menu-primary-enter-active {
+  transform: translateX(0%);
+  transition: all 0.6s ease;
+}
+.menu-primary-exit {
+  position: absolute;
+}
+.menu-primary-exit-active {
+  transform: translateX(-110%);
+  transition: all 0.6s ease-out;
+}
+.menu-secondary-enter {
+  transform: translateX(110%);
+}
+.menu-secondary-enter-active {
+  transform: translateX(0%);
+  transition: all 0.6s ease;
+}
+/* .menu-secondary-exit {} */
+.menu-secondary-exit-active {
+  transform: translateX(110%);
+  transition: all 0.6s ease-out;
+}
+
+.menu-third-enter {
+  transform: translateX(110%);
+}
+.menu-third-enter-active {
+  transform: translateX(0%);
+  transition: all 0.6s ease;
+}
+/* .menu-secondary-exit {} */
+.menu-third-exit-active {
+  transform: translateX(110%);
+  transition: all 0.6s ease-out;
 }
